<resources>
    <string name="app_name">SoPan Finder</string>
    <string name="findsopan">Tap to find SoPan</string>
    <string name="findsopan2">Finding your SoPan</string>
    <string name="wait">Please wait a moment…</string>
    <string name="home_desc_1">SoPan will track your location and find the most suitable solar panel for you!</string>
    <string name="specification">Specification</string>
    <string name="spec_detail">Type: Polycrystalline \nsolar cells Voltage at Pmax (Vmp): 18V\nCurrent at Pmax (Imp): 2.78A \nOpen-circuit voltage (Voc): 22.4V \nShort-circuit current (Isc): 3.24A \nSize: 540x 670x 30 mm</string>
    <string name="instructions">Instructions</string>
    <string name="inst_detail">1. Find your roof \n2. Stick solar panel using glue \n3. Voila free electricity</string>
    <string name="back">Back</string>
    <string name="home">Home</string>

    <!-- LoginActivity & SignupActivity -->
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="redirect_signup">Don\'t have an account? <b>Register here!</b></string>

    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="redirect_login">Already have an account? <b>Login here!</b></string>

    <string name="null_name">Name cannot be empty</string>
    <string name="null_email">E-mail cannot be empty</string>
    <string name="null_password">Password cannot be empty</string>
    <string name="null_confirm">Confirm Password cannot be empty</string>
    <string name="invalid_email">Invalid E-mail Address</string>
    <string name="success_login">Login Successful. Welcome %s!</string>
    <string name="success_signup">Sign Up Successful. Try logging into your account.</string>
    <string name="login_failed">Login Failed</string>
    <string name="minimal_characters">Password must contain minimal 8 characters</string>
    <string name="not_matched">Password not matched</string>

    <!-- ProfileActivity -->
    <string name="emailprofile">placeholder@email.com</string>
    <string name="logout">Logout</string>
    <string name="success_logout">Logout successful</string>

    <!-- MapsActivity -->
    <string name="title_activity_maps">MapsActivity</string>
    <string name="accurate_location">Is your location accurate?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="null_location">Location Unknown</string>

    <!-- ResultActivity -->
    <string name="solar_panel">Solar Panel</string>
    <string name="penesonic">Penesonic Solar Panel</string>
    <string name="buy_sopan">Buy Your SoPan!</string>
    <string name="shopee">Purchase at Shopee</string>
    <string name="tokped">Purchase at Tokopedia</string>
    <string name="solarcelltype">"Solar Cell Type : "</string>
    <string name="error_fetch">"Error fetching data</string>
    <string name="cell_type">Solar Cell Type</string>
    <string name="output">Power Output</string>
    <string name="efficiency">Efficiency</string>
    <string name="dimensions">Dimensions</string>
    <string name="weight">Weight</string>
    <string name="locationheader">SoPan Location</string>

    <!-- FavoriteActivity -->
    <string name="favorite">Favorites</string>
    <string name="location">Tangerang, Banten</string>
    <string name="location_icon">Location Icon</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="view_detail">View Detail</string>
    <string name="profile">Profile</string>
    <string name="address">User Address</string>

    <string-array name="sopan_names">
        <item>Penesonic Solar Panel</item>
        <item>SolarHaart Solar Panel</item>
        <item>Santech Solar Panel</item>
        <item>Renesola Solar Panel</item>
        <item>Semsohng Solar Panel</item>
    </string-array>

    <string-array name="sopan_locations">
        <item>Tangerang, Banten</item>
        <item>Jakarta, DKI Jakarta</item>
        <item>Bandung, Jawa Barat</item>
        <item>Lombok, Nusa Tenggara Barat</item>
        <item>Medan, Sumatra Utara</item>
    </string-array>

    <integer-array name="sopan_photos">
        <item>@drawable/panelplaceholder</item>
        <item>@drawable/panelplaceholder</item>
        <item>@drawable/panelplaceholder</item>
        <item>@drawable/panelplaceholder</item>
        <item>@drawable/panelplaceholder</item>
    </integer-array>
</resources>