<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_sopan"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/solar_panel"
            android:src="@drawable/panelplaceholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/iv_sopan"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_sopan_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/penesonic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_sopan"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/location_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/location_icon"
                    android:src="@drawable/ic_baseline_location_on_24" />

                <TextView
                    android:id="@+id/tv_sopan_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/location_icon"
                    android:text="@string/location" />

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_details">

            <ImageView
                android:id="@+id/delete_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:contentDescription="@string/delete_icon"
                android:src="@drawable/round_delete_outline_24" />

            <Button
                android:id="@+id/btn_view_detail"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="1dp"
                android:layout_toEndOf="@id/delete_icon"
                android:fontFamily="@font/alegreya_sans_sc_bold"
                android:text="@string/view_detail"
                android:textSize="10sp" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
