<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".view.profile.ProfileActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="250dp"
        app:cardBackgroundColor="@color/white">

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:cardCornerRadius="250dp"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/ppicon"
                app:tint="@color/gray"
                android:scaleType="centerCrop"/>

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/alegreya_sans_sc_bold"
        android:text="@string/name"
        android:textColor="@color/green"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/emailprofile"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_margin="50dp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/logout" />

</LinearLayout>